Revise serverSeq related code
